// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin should generate factories for operations 1`] = `
Object {
  "content": "export function createCreateUserMutationMock(props: Partial<CreateUserMutation>): CreateUserMutation {
  return {
createUser: {
__typename: 'User',
  id: \\"\\",
  username: \\"\\",
  communications: {
  __typename: 'UserPreferences',
    email: null,

  },
  followers: {
  __typename: 'User',
    id: \\"\\",

  },

},

    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should ignore the namespace for the operations types 1`] = `
Object {
  "content": "export function createCreateUserMutationMock(props: Partial<CreateUserMutation>): CreateUserMutation {
  return {
createUser: {
__typename: 'User',
  id: \\"\\",
  username: \\"\\",

},

    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should support fragments 1`] = `
Object {
  "content": "export function createCreateUserMutationMock(props: Partial<CreateUserMutation>): CreateUserMutation {
  return {
createUser: {
__typename: 'User',
  id: \\"\\",
  username: \\"\\",
  preferences: {
  __typename: 'UserPreferences',
    email: null,
    inApp: null,
    sms: null,

  },

},

    ...props,
  };
}


",
  "prepend": Array [],
}
`;
